// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders 1`] = `
"<a href=\\"/\\">
  <button data-css-1fdb9qj type=\\"button\\">
    <H2></H2>
  </button>
</a>"
`;

exports[`<Button /> renders with text 1`] = `
"<a href=\\"/\\">
  <button data-css-1fdb9qj type=\\"button\\">
    <H2>Try again</H2>
  </button>
</a>"
`;
